add endpoint for list of contracts via flux
